# traceAI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  testing_grpc.py
python/frameworks/a2a/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/a2a/examples/: multi_agent_demo.py
python/frameworks/a2a/tests/: test_framework_a2a.py
python/frameworks/a2a/traceai_a2a/: __init__.py  _a2a_client.py  _a2a_server.py  _attributes.py  _semantic_conventions.py  package.py
python/frameworks/agno/: README.md  pyproject.toml
python/frameworks/agno/examples/: agent_with_tools.py  basic_agent.py  team_example.py  workflow_example.py
python/frameworks/agno/tests/: __init__.py  conftest.py  test_attributes.py  test_instrumentor.py
python/frameworks/agno/traceai_agno/: __init__.py  _attributes.py  _instrumentor.py
python/frameworks/autogen/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/autogen/examples/: agent_with_tools.py  basic_agent_v02.py  basic_agent_v04.py  code_review_pipeline.py  customer_support.py  rag_pipeline.py  streaming_team.py  team_round_robin.py  team_selector.py
python/frameworks/autogen/tests/: __init__.py  conftest.py  test_attributes.py  test_edge_cases.py  test_instrumentor.py  test_real_world_scenarios.py  test_v04_wrapper.py
python/frameworks/autogen/traceai_autogen/: __init__.py  _attributes.py  _v04_wrapper.py
python/frameworks/azure_openai/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/azure_openai/examples/: async_chat_completions.py  chat_completions.py  chat_completions_stream.py  embeddings.py  requirements.txt
python/frameworks/azure_openai/traceai_azure_openai/: __init__.py  _request.py  _request_attributes_extractor.py  _response_accumulator.py  _response_attributes_extractor.py  _span_io_handler.py  _stream.py  _utils.py
python/frameworks/bedrock/: CHANGELOG.md  pyproject.toml
python/frameworks/bedrock/examples/: bedrock_1.py  bedrock_2.py  bedrock_converse.py  bedrock_multimodal.py
python/frameworks/bedrock/traceai_bedrock/: __init__.py  _attribute_extractor.py  _response_accumulator.py  _wrappers.py
python/frameworks/beeai/: README.md  pyproject.toml
python/frameworks/beeai/examples/: agent_with_tools.py  basic_agent.py  middleware_tracing.py  requirements_agent.py
python/frameworks/beeai/tests/: __init__.py  conftest.py  test_attributes.py  test_instrumentor.py  test_middleware.py
python/frameworks/beeai/traceai_beeai/: __init__.py  _attributes.py  _instrumentor.py  _middleware.py
python/frameworks/cerebras/: README.md  pyproject.toml
python/frameworks/cerebras/examples/: basic_chat.py  streaming.py
python/frameworks/cerebras/tests/: __init__.py  conftest.py  test_instrumentor.py  test_wrappers.py
python/frameworks/cerebras/traceai_cerebras/: __init__.py  _wrappers.py
python/frameworks/claude-agent-sdk/: README.md  pyproject.toml
python/frameworks/claude-agent-sdk/examples/: basic_agent.py  subagent_example.py
python/frameworks/claude-agent-sdk/tests/: __init__.py  test_attributes.py  test_client_wrapper.py  test_hooks.py  test_instrumentor.py  test_mcp_tracker.py  test_session_tracker.py  test_subagent_tracker.py
python/frameworks/claude-agent-sdk/traceai_claude_agent_sdk/: __init__.py  _attributes.py  _client_wrapper.py  _hooks.py  _instrumentor.py  _mcp_tracker.py  _session_tracker.py  _subagent_tracker.py
python/frameworks/cohere/: README.md  pyproject.toml
python/frameworks/cohere/examples/: basic_chat.py  embeddings.py  rerank_rag.py
python/frameworks/cohere/tests/: test_instrumentation.py
python/frameworks/cohere/traceai_cohere/: __init__.py  _request_attributes_extractor.py  _response_attributes_extractor.py  _utils.py  _wrappers.py
python/frameworks/deepseek/: README.md  pyproject.toml
python/frameworks/deepseek/examples/: basic_chat.py  reasoner.py
python/frameworks/deepseek/tests/: __init__.py  test_instrumentation.py
python/frameworks/deepseek/traceai_deepseek/: __init__.py  _request_attributes_extractor.py  _response_attributes_extractor.py  _utils.py  _wrappers.py
python/frameworks/fireworks/: README.md  pyproject.toml
python/frameworks/fireworks/examples/: basic_chat.py  streaming.py
python/frameworks/fireworks/tests/: __init__.py  conftest.py  test_instrumentor.py  test_wrappers.py
python/frameworks/fireworks/traceai_fireworks/: __init__.py  _wrappers.py
python/frameworks/guardrails/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/guardrails/traceai_guardrails/: __init__.py  _wrap_guard_call.py  guardrails_example.py
python/frameworks/huggingface/: README.md  pyproject.toml
python/frameworks/huggingface/examples/: basic_inference.py  chat_completions.py  embeddings.py
python/frameworks/huggingface/tests/: __init__.py  conftest.py  test_instrumentation.py
python/frameworks/huggingface/traceai_huggingface/: __init__.py  _request_attributes_extractor.py  (+4 more)
python/frameworks/lancedb/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/langchain/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/livekit/: README.md  pyproject.toml
python/frameworks/milvus/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/minimax/: README.md  pyproject.toml
python/frameworks/mongodb-vector/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/ollama/: README.md  pyproject.toml
python/frameworks/pgvector/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/pinecone/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/pydantic-ai/: README.md  pyproject.toml
python/frameworks/redis-vector/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/strands/: README.md  pyproject.toml
python/frameworks/together/: README.md  pyproject.toml
python/frameworks/vllm/: README.md  pyproject.toml
python/frameworks/weaviate/: CHANGELOG.md  README.md  pyproject.toml
python/frameworks/xai/: README.md  pyproject.toml
python/traceai/: __init__.py  pyproject.toml
python/traceai/tests/: __init__.py  test_traceai_init.py
(+700 files in other folders)
