[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceai-agno"
version = "0.1.0"
description = "TraceAI instrumentation for Agno Agent Framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "FutureAGI", email = "support@futureagi.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
keywords = [
    "traceai",
    "agno",
    "agents",
    "observability",
    "opentelemetry",
    "openinference",
    "tracing",
    "llm",
    "ai",
]

dependencies = [
    "fi-instrumentation>=0.1.0",
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-exporter-otlp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
agno = [
    "agno>=2.0.0",
    "openinference-instrumentation-agno>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/futureagi/traceai"
Documentation = "https://docs.futureagi.com/traceai"
Repository = "https://github.com/futureagi/traceai"

[tool.hatch.build.targets.wheel]
packages = ["traceai_agno"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
