[tool.poetry]
name = "traceAI-azure-openai"
version = "0.1.0"
description = "OpenTelemetry instrumentation for Azure OpenAI"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [
    { include = "traceai_azure_openai" }
]

[tool.poetry.dependencies]
python = ">3.9,<3.14"
fi-instrumentation-otel = ">=0.1.11"
openai = ">=1.69.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
