[tool.poetry]
name = "traceAI-bedrock"
version = "0.1.8"
description = "OpenTelemetry instrumentation for Bedrock"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"

packages = [
    { include = "traceai_bedrock" },
]

[tool.poetry.dependencies]
python = ">3.10, <3.13"
dacite = "^1.9.1"
fi-instrumentation-otel = ">=0.1.7"
botocore = "*"
boto3 = ">=1.38.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
