[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "traceai-claude-agent-sdk"
version = "0.1.0"
description = "OpenTelemetry instrumentation for Claude Agent SDK"
authors = ["FutureAGI <dev@futureagi.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/futureagi/traceai"
repository = "https://github.com/futureagi/traceai"
keywords = ["opentelemetry", "claude", "agent", "tracing", "observability", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
packages = [{ include = "traceai_claude_agent_sdk" }]

[tool.poetry.dependencies]
python = ">=3.9"
opentelemetry-api = ">=1.0.0"
opentelemetry-sdk = ">=1.0.0"
opentelemetry-instrumentation = ">=0.40b0"
fi-instrumentation-otel = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
claude-agent-sdk = { version = ">=0.1.0", optional = true }

[tool.poetry.extras]
test = ["claude-agent-sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
