[tool.poetry]
name = "traceAI-guardrails"
version = "0.2.0"
description = "OpenTelemetry instrumentation for Guardrails"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"

packages = [
    { include = "traceai_guardrails" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
guardrails-ai = ">=0.5.0"
fi-instrumentation-otel = ">=0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
