[tool.poetry]
name = "traceAI-huggingface"
version = "0.1.0"
description = "OpenTelemetry instrumentation for HuggingFace Inference API - text generation, chat, and embeddings"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [
    { include = "traceai_huggingface" }
]

[tool.poetry.dependencies]
python = ">3.9,<3.14"
fi-instrumentation-otel = ">=0.1.11"
huggingface-hub = ">=0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
