[tool.poetry]
name = "traceAI-langchain"
version = "0.1.11"
description = "OpenTelemetry instrumentation for Langchain"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"

packages = [
    { include = "traceai_langchain" },
]

[tool.poetry.dependencies]
python = ">3.9,<3.14"
fi-instrumentation-otel = ">=0.1.11"
langchain = {version = "^0.3.9", extras = ["all"]}
langchain-community = {version = "^0.3.9", extras = ["all"]}
langchain-core = ">=0.2.43"
langgraph = {version = ">=0.0.1", optional = true}

[tool.poetry.extras]
langgraph = ["langgraph"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
