[tool.poetry]
name = "traceAI-livekit"
version = "0.1.0"
description = "OpenTelemetry instrumentation for LiveKit"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [
    { include = "traceai_livekit" }
]

[tool.poetry.dependencies]
python = ">3.9,<3.14"
fi-instrumentation-otel = ">=0.1.14"

[tool.poetry.group.dev.dependencies]
livekit-agents = "*"
livekit-plugins-openai = "*"
livekit-plugins-silero = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
