[tool.poetry]
name = "traceAI-minimax"
version = "0.1.0"
description = "OpenTelemetry instrumentation for MiniMax - chat completions via OpenAI-compatible API"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [
    { include = "traceai_minimax" }
]

[tool.poetry.dependencies]
python = ">=3.10"
fi-instrumentation-otel = ">=0.1.11"
openai = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
