[tool.poetry]
name = "traceAI-mongodb"
version = "0.1.0"
description = "OpenTelemetry instrumentation for MongoDB Atlas Vector Search"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [{ include = "traceai_mongodb" }]
keywords = ["opentelemetry", "mongodb", "atlas", "vector-search", "tracing", "observability", "rag"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fi-instrumentation-otel = ">=0.1.11"
pymongo = ">=4.6.0"
wrapt = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
