[tool.poetry]
name = "traceAI-pgvector"
version = "0.1.0"
description = "OpenTelemetry instrumentation for pgvector PostgreSQL extension"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [{ include = "traceai_pgvector" }]
keywords = ["opentelemetry", "pgvector", "postgresql", "vector-database", "tracing", "observability", "rag"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fi-instrumentation-otel = ">=0.1.11"
pgvector = ">=0.2.0"
psycopg2-binary = ">=2.9.0"
wrapt = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
