[tool.poetry]
name = "traceAI-pinecone"
version = "0.1.0"
description = "OpenTelemetry instrumentation for Pinecone vector database"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [
    { include = "traceai_pinecone" }
]
keywords = ["opentelemetry", "pinecone", "vector-database", "tracing", "observability", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fi-instrumentation-otel = ">=0.1.11"
pinecone-client = ">=3.0.0"
wrapt = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
