[tool.poetry]
name = "traceAI-redis"
version = "0.1.0"
description = "OpenTelemetry instrumentation for Redis Vector Search (RediSearch/RedisVL)"
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [{ include = "traceai_redis" }]
keywords = ["opentelemetry", "redis", "vector-search", "redisearch", "tracing", "observability", "rag"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fi-instrumentation-otel = ">=0.1.11"
redis = ">=4.5.0"
redisvl = ">=0.1.0"
wrapt = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
